--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "4.3.1",
     "expose-loader": "^2.0.0",
     "jquery": "^3.6.0",
+    "jquery-datetimepicker": "^2.5.21",
     "popper.js": "^1.16.1",
     "rails-erb-loader": "^5.5.2"
   },
